--- a/src/pages/leaderboard/index.pug
+++ b/src/pages/leaderboard/index.pug
@@ -57,10 +57,9 @@ aside.right-side
         .row
             .col-xs-12
                 .box
-                    .box-header
-                        h3.box-title Top 10 Drivers
                     .box-body
                         .table-responsive
+                            h3.box-title(style="margin-bottom: -26px;") Top 10 Drivers
                             div.text-center(v-if='loader')
                                 i.fa.fa-refresh.fa-spin.fa-3x.fa-fw
                             template(v-else)
