--- a/src/pages/new_req/index.pug
+++ b/src/pages/new_req/index.pug
@@ -1,5 +1,5 @@
 aside.right-side
-    section.content-header
+    section.content-header(style="display:none")
         ol.breadcrumb
             li
                 router-link(to='/')
