--- a/views/pages/faqs.pug
+++ b/views/pages/faqs.pug
@@ -140,21 +140,21 @@ html(lang='en')
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_1")
                                     | 1. We also have the loaders as well so how can they earn kindly tell?
                         #d_ques_1.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | When user post there job details, if user need labour so the user write on detail then so then driver bid on this job he decide the amount of the job then bid.
 
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_2")
                                     | 2. Kindly tell me your requirements what you need for the registration process?
                         #d_ques_2.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | Driver must provides these documents!
                                 ol
                                     li Passport Size Photo
@@ -175,11 +175,11 @@ html(lang='en')
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_3")
                                     | 3. Kindly tell me about the service you provide me?
                         #d_ques_3.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 ul
                                     li RoadioApp is a Logistics service.
                                     li In RoadioApp the client give the job to shifting the house Furniture and etc.
@@ -190,61 +190,61 @@ html(lang='en')
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_4")
                                     | 4. Kindly tell me the benefits of your RoadioApp service?
                         #d_ques_4.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                | Now you take the job from your stops but if you use our RoadioApp service so you can get jobs from all over the city.
 
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_5")
                                     | 5. Are you give insurance for my vehicle?
                         #d_ques_5.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 ul
                                     li No our Company did not provide insurance we did not have that policy.
                                     li You are the responsible about you vehicle.
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_6")
                                     | 6. Is passenger cheated me so in this case Company provide the money?
                         #d_ques_6.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 ul
                                     li Driver is responsible about this.
                                     li Company is not responsible for this case.
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_7")
                                     | 7. If any accident happen so company provide me any maintenance?
                         #d_ques_7.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | No we don't.
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_8")
                                     | 8. There is any guaranty for the regular jobs?
                         #d_ques_8.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | If the driver give the best service to the clients so we try our level best to give that driver maximum task and opportunity to earn more money.
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_9")
                                     | 9. How can we get high ratings?
                         #d_ques_9.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 ul
                                     li If you provide the good service.
                                     li Low rate charged.
@@ -252,20 +252,20 @@ html(lang='en')
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_10")
                                     | 10. Can you provide mobile insurance?
                         #d_ques_10.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | RoadioApp didn't provide mobile insurance.
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#d_ques_11")
                                     | 11. Tell me the working hours?
                         #d_ques_11.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | Complete your job at a time.
 
 
@@ -275,40 +275,40 @@ html(lang='en')
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#u_ques_1")
                                     | 1. Driver accept the request since 2 hours ago and not respond?
                         #u_ques_1.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | We are contact the driver get the status.
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#u_ques_2")
                                     | 2. When we schedule booking after 4 days?
                         #u_ques_2.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | In future add this booking option.
 
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#u_ques_3")
                                     | 3. Equipment destroy who clam company or driver?
                         #u_ques_3.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | Wts a driver responsibility to shift your equipment carefully.
 
                 .panel-group.my-10
                     .panel.panel-warning
                         .panel-heading
-                            h4.panel-title
+                            h4.panel-title.q1
                                 a(data-toggle="collapse" href="#u_ques_4")
                                     | 4. Is the app available in IOS?
                         #u_ques_4.panel-collapse.collapse
-                            .panel-body
+                            .panel-body.q2
                                 | We currently we do not have an iOS version of the app but customers can call our call center to make a booking.
 
         // Start of roadioapp Zendesk Widget script
