--- a/src/pages/list_adda/index.pug
+++ b/src/pages/list_adda/index.pug
@@ -1,5 +1,5 @@
 aside.right-side
-    section.content-header
+    section.content-header(style="display:none")
         h1 List Adda
         ol.breadcrumb
             li
@@ -15,9 +15,8 @@ aside.right-side
         .row
             .col-xs-12
                 .box
-                    .box-header
-                        h3.box-title Adda
                     .box-body.table-responsive
+                        h3.box-title(style="margin-bottom: -26px;") Adda List
                         div.text-center(v-if='dataLoad')
                             i.fa.fa-refresh.fa-spin.fa-3x.fa-fw
                         h3.text-center(style='margin: 15px 0;' v-if='!dataLoad && data.length === 0')
