--- a/src/pages/user_listing/index.pug
+++ b/src/pages/user_listing/index.pug
@@ -1,5 +1,5 @@
 aside.right-side
-    section.content-header
+    section.content-header(style="display:none")
         h1
             | Users&nbsp;
             small Users List
@@ -14,7 +14,7 @@ aside.right-side
             .col-xs-12
                 .box
                     .box-header
-                        h3.box-title Users
+                        h3.box-title(style="margin-bottom: -26px;") Users
                         div.text-center(v-if='dataLoad')
                             i.fa.fa-refresh.fa-spin.fa-3x.fa-fw
                         h3.text-center(style='margin: 15px 0;' v-if='!dataLoad && data1.length === 0')
@@ -29,7 +29,7 @@ aside.right-side
                                         th Mobile#
                                         th Created Time
                                         th Action
-                                        th Status
+                                        //th Status
                                 template(slot="tbody")
                                     tr.open_row(v-for="(row, ind) in data1" v-bind:data-url="'/admin/users/profile/'+row.key")
                                         td {{ 1+ind }}
@@ -40,6 +40,6 @@ aside.right-side
                                         td
                                             button.btn.btn-success.btn-xs(v-on:click.prevet='active(row.key, ind, $event)' v-if='row.status === 0') Activate
                                             button.btn.btn-danger.btn-xs(v-on:click.prevet='deActive(row.key, ind, $event)' v-else) Deactivate
-                                        td
-                                            button.btn.btn-primary.btn-sm(type="button", v-on:click.prevent='block(row.key, ind, $event)' v-if='row.blocked === false') Block
-                                            button.btn.btn-primary.btn-sm(type="button", v-on:click.prevent='unblock(row.key, ind, $event)' v-else ) UnBlock
+                                        //td
+                                        //    button.btn.btn-primary.btn-sm(type="button", v-on:click.prevent='block(row.key, ind, $event)' v-if='row.blocked === false') Block
+                                        //    button.btn.btn-primary.btn-sm(type="button", v-on:click.prevent='unblock(row.key, ind, $event)' v-else ) UnBlock
