--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -261,7 +261,7 @@ html(lang='en')
                     // PHONES IMAGE
                     .col-md-6.wow.fadeInRight.animated(data-wow-offset='10', data-wow-duration='1.5s')
                         .phone-image
-                            img(src='/images/become_roadio.png', alt='')
+                            img(src='/images/become_roadio.jpg', alt='')
                     // RIGHT SIDE WITH BRIEF
                     .col-md-6.left-align.wow.fadeInLeft.animated(data-wow-offset='10', data-wow-duration='1.5s')
                         // SECTION TITLE
@@ -313,7 +313,7 @@ html(lang='en')
                     // PHONES IMAGE
                     .col-md-6.wow.fadeInRight.animated(data-wow-offset='10', data-wow-duration='1.5s')
                         .phone-image
-                            img(src='/images/become_roadio.png', alt='')
+                            img(src='/images/become_roadio.jpg', alt='')
                     // /END PHONES IMAGE
                 // /END ROW
             // /END CONTAINER
@@ -410,7 +410,7 @@ html(lang='en')
                         h3 24/7 Support
                         // SERVICE DESCRIPTION
                         p
-                            | RoadioApp Ninja support center is there for your assistance all day and night. you may write us and raise a ticket or you may call our customer support representative at +9233223232323.
+                            | RoadioApp Ninja support center is there for your assistance all day and night. you may write us and raise a ticket or you may call our customer support representative at +923111009983, +923111994494.
                     // /END SINGLE SERVICE
                 // /END ROW
             // /END CONTAINER
@@ -433,20 +433,14 @@ html(lang='en')
                 .row.wow.bounceIn.animated(data-wow-offset='10', data-wow-duration='1.5s')
                     #screenshots.owl-carousel.owl-theme
                         .shot
-                            a(href='/images/screenshots/screen1.png', data-lightbox-gallery='screenshots-gallery')
-                                img(src='images/screenshots/screen1.png', alt='Screenshot')
+                            a(href='/images/screenshots/screen1.jpeg', data-lightbox-gallery='screenshots-gallery')
+                                img(src='images/screenshots/screen1.jpeg', alt='Screenshot')
                         .shot
-                            a(href='/images/screenshots/screen4.png', data-lightbox-gallery='screenshots-gallery')
-                                img(src='images/screenshots/screen4.png', alt='Screenshot')
+                            a(href='/images/screenshots/screen2.jpeg', data-lightbox-gallery='screenshots-gallery')
+                                img(src='images/screenshots/screen2.jpeg', alt='Screenshot')
                         .shot
-                            a(href='/images/screenshots/screen5.png', data-lightbox-gallery='screenshots-gallery')
-                                img(src='images/screenshots/screen5.png', alt='Screenshot')
-                        .shot
-                            a(href='/images/screenshots/screen6.png', data-lightbox-gallery='screenshots-gallery')
-                                img(src='images/screenshots/screen6.png', alt='Screenshot')
-                        .shot
-                            a(href='/images/screenshots/screen8.png', data-lightbox-gallery='screenshots-gallery')
-                                img(src='images/screenshots/screen8.png', alt='Screenshot')
+                            a(href='/images/screenshots/screen3.jpeg', data-lightbox-gallery='screenshots-gallery')
+                                img(src='images/screenshots/screen3.jpeg', alt='Screenshot')
                     // /END SCREENSHOTS
                 // /END ROW
             // /END CONTAINER
@@ -467,9 +461,7 @@ html(lang='en')
                                 h2.wow.fadeInLeft.animated(data-wow-offset='10', data-wow-duration='1.5s') Download the app on
                                 // BUTTONS
                                 .buttons.wow.fadeInRight.animated(data-wow-offset='10', data-wow-duration='1.5s')
-                                    a.left-store-icon(href='')
-                                        img(src='/images/mac_store.png')
-                                    a.right-store-icon(href='https://play.google.com/store/apps/details?id=com.roadioapp.roadioappuser')
+                                    a.right-store-icon(href='https://play.google.com/store/apps/details?id=com.roadioapp.roadioappuser' target="_blank")
                                         img(src='/images/play_store.png')
                                 // /END BUTTONS
                             // END OF DOWNLOAD BUTTONS AREA
@@ -519,8 +511,14 @@ html(lang='en')
                 // SOCIAL ICONS
                 ul.social-icons
                     li
-                        a(href='https://www.facebook.com/RoadioApp-271823006566712/')
+                        a(href='https://www.facebook.com/RoadioApp-271823006566712/' target="_blank")
                             i.social_facebook_square
+                    li
+                        a(href='https://www.instagram.com/roadioapp' target="_blank")
+                            i.social_instagram_square
+                    li
+                        a(href='https://twitter.com/Roadioapppak' target="_blank")
+                            i.social_twitter_square
                 // COPYRIGHT TEXT
                 p.copyright
                     | ©2017 Roadioapp, All Rights Reserved
