Website changes fix 3

--- a/public/stylesheets/css/styles.css
+++ b/public/stylesheets/css/styles.css
@@ -637,7 +637,11 @@ object {
 
 .screenshots {
     padding-top: 80px;
-    padding-bottom: 120px;
+    padding-bottom: 80px;
+}
+
+.screenshots video {
+    width: 100%;
 }
 
 .screenshots .shot {
